# frappe-better-list-view

./: MANIFEST.in  README.md  pyproject.toml  setup.py
frappe_better_list_view/: __init__.py  hooks.py  modules.txt  version.py
frappe_better_list_view/config/: desktop.py  docs.py
frappe_better_list_view/frappe_better_list_view/: __init__.py
frappe_better_list_view/public/: build.json
frappe_better_list_view/public/js/: better_list_view.bundle.js  better_list_view_v12.bundle.js
